--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-
+<main>
   <div id="card">
     <div id="qr-code-container">
       <img src="./images/image-qr-code.png" alt="QR code" id="qr-code">
@@ -31,5 +31,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Loïc LAMAILLE</a>.
   </div>
+  </main>
 </body>
 </html>
