--- a/index.html
+++ b/index.html
@@ -21,15 +21,9 @@
       <img src="./images/image-qr-code.png" alt="QR code" id="qr-code">
     </div>
     <div id="text-container">
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p id="text-title">Improve your front-end skills by building projects</p>
+      <p id="sub-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Loïc LAMAILLE</a>.
   </div>
   </main>
 </body>
